src/index.css
@import "@react-pdf-viewer/core/lib/styles/index.css";
@import "@react-pdf-viewer/default-layout/lib/styles/index.css";
@tailwind base;
@tailwind components;
@tailwind utilities;
 
@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;
 
    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;
 
    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;
 
    --primary: 0 72% 51%;
    --primary-foreground: 210 40% 98%;
 
    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;
 
    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;
 
    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;
 
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 0 72% 51%;
 
    --radius: 0.5rem;
  }
 
  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;
 
    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;
 
    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;
 
    --primary: 0 72% 51%;
    --primary-foreground: 210 40% 98%;
 
    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;
 
    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;
 
    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;
 
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;
 
    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 0 72% 51%;
  }
}
 
@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }
}

.non-printable {
  @media print {
    display: none;
  }
}

.rpv-core__viewer {
    border: 1px solid hsl(var(--border));
    border-radius: var(--radius);
}
.rpv-core__inner-pages {
    background-color: hsl(var(--background));
}
.rpv-default-layout__toolbar {
    background-color: hsl(var(--card));
    border-bottom: 1px solid hsl(var(--border));
}
.rpv-default-layout__toolbar-item, .rpv-core__popover-body-input, .rpv-core__popover-body-label {
    color: hsl(var(--card-foreground)) !important;
}
.rpv-core__popover-body {
    background-color: hsl(var(--popover)) !important;
    border: 1px solid hsl(var(--border)) !important;
}
.rpv-core__arrow-inner, .rpv-core__arrow-outer {
    border-color: hsl(var(--border)) !important;
}

.A4-container {
  width: 210mm;
  min-height: 297mm;
  height: auto;
  box-sizing: border-box;
}

